# PR

./: .gitignore  README.md
egzamin/: .notatki.swp  notatki
lab_1/: CMakeLists.txt  HelloWorlds.cpp  HelloWorlds.h  Pi.cpp  Pi.h  zadanie_1.cpp  zadanie_1.h  zadanie_2.cpp
zadanie_1/: CMakeLists.txt  HelloWorlds.cpp  HelloWorlds.h  PiSerial.h  pi_serial.cpp  zadanie_1.cpp  zadanie_2.cpp
